[package]
name = "compio-io"
version = "0.9.0"
description = "IO traits for completion based async IO"
categories = ["asynchronous"]
keywords = ["async", "io"]
readme = "README.md"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
compio-buf = { workspace = true, features = ["arrayvec"] }
futures-util = { workspace = true, features = ["sink"] }
paste = { workspace = true }
pin-project-lite = { workspace = true, optional = true }
synchrony = { workspace = true, features = ["bilock"] }

cfg-if = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
serde = { version = "1.0.219", optional = true }
serde_json = { version = "1.0.140", optional = true }
bytemuck = { workspace = true, optional = true, features = [
    "min_const_generics",
] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, optional = true, features = [
    "Win32_Networking_WinSock",
] }

[dev-dependencies]
compio-net = { workspace = true }
compio-runtime = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
serde = { version = "1.0.219", features = ["derive"] }
futures-executor = { workspace = true }

[features]
default = ["bytes"]
compat = ["futures-util/io", "dep:pin-project-lite"]
sync = []
ancillary = ["dep:cfg-if", "dep:libc", "dep:windows-sys"]
bytes = ["compio-buf/bytes"]

# Codecs
# Serde json codec
codec-serde-json = ["dep:serde", "dep:serde_json", "dep:thiserror"]

# Nightly features
allocator_api = ["compio-buf/allocator_api"]
read_buf = ["compio-buf/read_buf"]
nightly = ["allocator_api", "read_buf"]

[[test]]
name = "compat"
required-features = ["compat"]

[[test]]
name = "framed"
required-features = ["codec-serde-json"]

[[test]]
name = "ancillary"
required-features = ["ancillary"]
