[package]
name = "compio-log"
version = "0.2.0"
description = "Log of compio"
categories = ["asynchronous"]
readme = "README.md"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[features]
enable_log = []
