[package]
name = "compio-macros"
version = "0.1.2"
description = "Proc macro of compio"
categories = ["asynchronous"]
readme = "README.md"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = { version = "2.0.115", features = ["full"] }
proc-macro-crate = "3.4.0"
