[package]
name = "compio-macros"
version = "0.2.0"
description = "Proc macro of compio"
categories = ["asynchronous"]
readme = "README.md"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full"] }
proc-macro-crate = "3.0.0"
