[package]
name = "compio-net"
version = "0.11.0"
description = "Networking IO for compio"
categories = ["asynchronous", "network-programming"]
keywords = ["async", "net"]
readme = "README.md"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Workspace dependencies
compio-buf = { workspace = true }
compio-driver = { workspace = true }
compio-io = { workspace = true }
compio-runtime = { workspace = true, features = ["event", "time"] }

cfg-if = { workspace = true }
either = "1.15.0"
once_cell = { workspace = true }
scc = { version = "2", optional = true }
socket2 = { workspace = true }

[target.'cfg(windows)'.dependencies]
widestring = { workspace = true }
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_System_IO",
] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
fastrand = "2.3"
futures-util = { workspace = true }
logos = "0.16"
zerocopy = { version = "0.8.39", features = ["derive"] }

# Shared dev dependencies for all platforms
[dev-dependencies]
compio-macros = { workspace = true }
aligned-array = "1.0.1"
futures-util = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["dns-cache"]
dns-cache = ["scc"]
# Nightly features
once_cell_try = []
nightly = ["once_cell_try"]
