[package]
name = "compio-quic"
version = "0.6.0"
description = "QUIC for compio"
categories = ["asynchronous", "network-programming"]
keywords = ["async", "net", "quic"]
readme = "README.md"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Workspace dependencies
compio-io = { workspace = true }
compio-buf = { workspace = true, features = ["bytes"] }
compio-log = { workspace = true }
compio-net = { workspace = true }
compio-runtime = { workspace = true, features = ["time"] }

quinn-proto = { version = "0.11.10", default-features = false }
rustls = { workspace = true }
rustls-platform-verifier = { workspace = true, optional = true }
rustls-native-certs = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }
h3 = { version = "0.0.8", optional = true }
h3-datagram = { version = "0.0.2", optional = true }

# Utils
flume = { workspace = true, default-features = false, features = ["async"] }
futures-util = { workspace = true }
thiserror = { workspace = true }
rustc-hash = "2.0.0"
synchrony = { workspace = true }

# Windows specific dependencies
[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Networking_WinSock"] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[build-dependencies]
cfg_aliases = { workspace = true }

[dev-dependencies]
compio-dispatcher = { workspace = true }
compio-driver = { workspace = true }
compio-fs = { workspace = true }
compio-macros = { workspace = true }
compio-runtime = { workspace = true, features = ["criterion"] }

criterion = { workspace = true, features = ["async_tokio"] }
http = "1.1.0"
quinn = "0.11.6"
rand = { workspace = true }
rcgen = "0.14.1"
socket2 = { workspace = true, features = ["all"] }
tokio = { workspace = true, features = ["macros", "rt"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
default = ["ring"]
io-compat = ["futures-util/io"]
platform-verifier = ["dep:rustls-platform-verifier"]
native-certs = ["dep:rustls-native-certs"]
webpki-roots = ["dep:webpki-roots"]
h3 = ["dep:h3", "dep:h3-datagram"]
ring = ["quinn-proto/rustls-ring"]
windows-gro = []
sync = []

[[example]]
name = "http3-client"
required-features = ["h3"]

[[example]]
name = "http3-server"
required-features = ["h3"]

[[example]]
name = "quic-dispatcher"
required-features = ["compio-driver/sync"]

[[bench]]
name = "quic"
harness = false
required-features = ["io-compat"]
