[package]
name = "compio-runtime"
version = "0.11.0"
description = "High-level runtime for compio"
categories = ["asynchronous"]
keywords = ["async", "runtime"]
readme = "README.md"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Workspace dependencies
compio-driver = { workspace = true }
compio-buf = { workspace = true }
compio-log = { workspace = true }

async-task = "4.5.0"
cfg-if = { workspace = true, optional = true }
criterion = { workspace = true, optional = true }
core_affinity = "0.8.3"
crossbeam-queue = { workspace = true }
futures-util = { workspace = true }
once_cell = { workspace = true }
scoped-tls = "1.0.1"
slab = { workspace = true }
socket2 = { workspace = true }
pin-project-lite = { workspace = true }

# Windows specific dependencies
[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_System_IO"] }

# Unix specific dependencies
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { workspace = true, features = ["Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
core-foundation = "0.10.0"
block2 = "0.6.0"

[features]
event = ["dep:cfg-if", "compio-buf/arrayvec"]
time = []

# Enable it to always notify the driver when a task schedules.
notify-always = []

future-combinator = []
current_thread_id = []
nightly = ["current_thread_id", "future-combinator"]

[[test]]
name = "custom_loop"
required-features = ["event", "time"]

[[test]]
name = "event"
required-features = ["event"]

[[test]]
name = "drop"
required-features = ["time"]
