[package]
name = "compio-signal"
version = "0.9.0"
description = "Signal handling for compio"
categories = ["asynchronous"]
keywords = ["async", "signal"]
readme = "README.md"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
once_cell = { workspace = true }
slab = { workspace = true }
synchrony = { workspace = true, features = ["async_flag"] }

# Windows specific dependencies
[target.'cfg(windows)'.dependencies]
compio-driver = { workspace = true }
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }

# Unix specific dependencies
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
os_pipe = { workspace = true }

[dev-dependencies]
compio-runtime = { workspace = true }

[features]
# Nightly features
lazy_cell = []
once_cell_try = []
nightly = ["lazy_cell", "once_cell_try"]
