[package]
name = "compio-signal"
version = "0.10.0-rc.1"
description = "Signal handling for compio"
categories = ["asynchronous"]
keywords = ["async", "signal"]
readme = "README.md"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
slab = { workspace = true }
synchrony = { workspace = true, features = ["async_flag"] }

# Windows specific dependencies
[target.'cfg(windows)'.dependencies]
once_cell = { workspace = true }
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }

# Unix specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["signal"] }

[dev-dependencies]
futures-executor = { workspace = true }

[features]
# Nightly features
once_cell_try = []
nightly = ["once_cell_try"]
