[package]
name = "compio-tls"
version = "0.8.0"
description = "TLS adaptor with compio"
categories = ["asynchronous", "network-programming"]
keywords = ["async", "net", "tls"]
readme = "README.md"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
compio-buf = { workspace = true }
compio-io = { workspace = true, features = ["compat"] }

native-tls = { workspace = true, optional = true, features = ["alpn"] }
rustls = { workspace = true, default-features = false, optional = true, features = [
    "logging",
    "std",
    "tls12",
] }

futures-rustls = { workspace = true, default-features = false, optional = true, features = [
    "logging",
    "tls12",
] }
futures-util = { workspace = true, optional = true }

[dev-dependencies]
compio-net = { workspace = true }
compio-runtime = { workspace = true }
compio-macros = { workspace = true }

rustls = { workspace = true, default-features = false, features = ["ring"] }
rustls-native-certs = { workspace = true }

futures-rustls = { workspace = true, default-features = false, features = [
    "ring",
] }

[features]
default = ["native-tls"]
all = ["native-tls", "rustls"]
rustls = ["dep:rustls", "dep:futures-rustls", "dep:futures-util"]

ring = ["rustls", "rustls/ring", "futures-rustls/ring"]

read_buf = ["compio-buf/read_buf", "compio-io/read_buf", "rustls?/read_buf"]
nightly = ["read_buf"]
