[package]
name = "compio-ws"
version = "0.1.1"
description = "WebSocket library for the compio runtime"
edition = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
compio-buf = { workspace = true }
compio-io = { workspace = true, features = ["compat"] }
compio-net = { workspace = true, optional = true }
compio-tls = { workspace = true, optional = true, default-features = false, features = [
    "rustls",
] }
compio-log = { workspace = true }

tungstenite = "0.28.0"

native-tls = { workspace = true, optional = true }

rustls = { workspace = true, optional = true, default-features = false }
rustls-platform-verifier = { workspace = true, optional = true }
rustls-native-certs = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }
rustls-pemfile = "2.0"

[features]
default = []
connect = ["dep:compio-net"]
native-tls = [
    "connect",
    "dep:native-tls",
    "compio-tls/native-tls",
    "tungstenite/native-tls",
]
rustls = [
    "connect",
    "dep:compio-tls",
    "dep:rustls",
    "compio-tls/rustls",
    "tungstenite/__rustls-tls",
]
rustls-platform-verifier = ["rustls", "dep:rustls-platform-verifier"]
rustls-native-certs = ["rustls", "dep:rustls-native-certs"]
webpki-roots = ["rustls", "dep:webpki-roots"]
ring = ["compio-tls?/ring"]
aws-lc-rs = ["compio-tls?/aws-lc-rs"]
aws-lc-rs-fips = ["compio-tls?/aws-lc-rs-fips"]

[dev-dependencies]
log = "0.4"
env_logger = "0.11"
compio-net = { workspace = true }
compio-macros = { workspace = true }
futures-channel = { workspace = true }
compio-runtime = { workspace = true }
compio-driver = { workspace = true }

[[example]]
name = "echo_server"
required-features = ["connect"]

[[example]]
name = "client"
required-features = ["connect"]

[[example]]
name = "autobahn-client"
required-features = ["connect"]

[[example]]
name = "autobahn-server"
required-features = ["connect"]

[[example]]
name = "echo_server_tls"
required-features = ["connect"]
[[example]]
name = "client_tls"
required-features = ["connect"]

[[test]]
name = "websocket"
required-features = ["connect", "compio-driver/io-uring"]
